# TigerTaxi

./: .apm_start.sh.swp  .bashrc  .gitignore  .gitmodules  README.md  apm_start.sh  ken_test.rviz  loam_cart.txt  tt_eval_imu.sh  tt_start.sh
apm_arduino/libraries/cart_odom/: cart_odom.h
apm_arduino/libraries/error_indication/: error_indication.h
apm_arduino/libraries/imu/: IMU.cpp  IMU.h  freeram.h  inv_mpu.h
apm_arduino/libraries/ros_lib/: ArduinoHardware.h
apm_arduino/libraries/rosdue/: rosdue.h
apm_arduino/libraries/steering/: steering.cpp  steering.h
apm_arduino/libraries/throttle/: throttle.h
apm_arduino/libraries/ultrasonics/: ultrasonics.h
apm_arduino/libraries/wheel_encoder/: wheel_encoder.cpp  wheel_encoder.h
apm_arduino/main_due1/: main_due1.ino
apm_arduino/pubsub/: pubsub.ino
apm_arduino/test_brake_sensor/: brake_sensor.cpp
apm_arduino/test_brake_sensor/brake_sensor/: brake_sensor.ino
apm_arduino/test_cart_odom/: cart_odom.cpp
apm_phase5/: apf_navigation.py  apm_start.sh  costmap_viewer.py  viewer.py
apm_phase5/Scripts/: install_opencv.sh
apm_phase5/catkin_ws/src/apm_2dnav/: CMakeLists.txt  package.xml
apm_phase5/catkin_ws/src/apm_2dnav/launch/: move_base.launch
apm_phase5/catkin_ws/src/apm_start/: CMakeLists.txt  package.xml
apm_phase5/catkin_ws/src/apm_start/launch/: Unused Packages  apm_mapping.launch  apm_start.launch
apm_phase5/catkin_ws/src/apm_tf/: CMakeLists.txt  package.xml
apm_phase5/catkin_ws/src/apm_tf/launch/: apm_tf.launch
apm_phase5/catkin_ws/src/costmap_2d/launch/: example.launch
apm_phase5/catkin_ws/src/dummynode/: CMakeLists.txt  package.xml
apm_phase5/catkin_ws/src/dummynode/src/: dummypublisher.py
apm_phase5/catkin_ws/src/heightmap_tf/: CMakeLists.txt  package.xml
apm_phase5/catkin_ws/src/heightmap_tf/src/: frame_tf_broadcaster.cpp
apm_phase5/catkin_ws/src/laser_scan_matcher/launch/: scan_matcher.launch
apm_phase5/catkin_ws/src/launch/: apm_2dnav.launch  apm_mapping.launch  apm_start _teb.launch  apm_start.launch  apm_start_teb.launch  apm_tf.launch  package.xml
apm_phase5/catkin_ws/src/plotGpsOnSatelitteMap/script/: plotGpsDataOnMap.py
apm_phase5/catkin_ws/src/rosdue/scripts/: serial_due.py
apm_phase5/catkin_ws/src/rqt_apm_modecontrol/: package.xml
apm_phase5/catkin_ws/src/rqt_apm_modecontrol/resource/: APM_modecontrol.ui
apm_phase5/catkin_ws/src/rqt_apm_speedometer/: CMakeLists.txt  package.xml  plugin.xml
apm_phase5/catkin_ws/src/rqt_apm_speedometer/resource/: APM_speedometer.ui
apm_phase5/catkin_ws/src/rqt_apm_ui/: plugin.xml
apm_phase5/catkin_ws/src/rqt_apm_ui/resource/: APM_UI.ui  APM_UI_fullscreen.ui
apm_phase5/catkin_ws/src/safezone/: CMakeLists.txt  package.xml
apm_phase5/catkin_ws/src/safezone/src/: blocking_main.cpp  classifier.cpp  main.cpp  seq_main.cpp  test_segmentation.cpp
apm_phase5/catkin_ws/src/tt_start/config/: costmap_common_params.yaml  local_costmap_params.yaml
apm_phase5/catkin_ws/src/tt_start/launch/: ekf.launch  tt_start.launch
apm_phase5/catkin_ws/src/vel_tf/: CMakeLists.txt  package.xml
apm_phase5/catkin_ws/src/vel_tf/src/: frame_tf_broadcaster.cpp  vel_tf_broadcaster.cpp
apm_phase5/catkin_ws/src/velodyne_height_map/src/: heightmap.cpp
apm_phase5/doc/: things_to_add_to_the_install_readme
apm_phase5/scripts/: additions_for_caffe  cuda_preinstall.sh  opencv_preinstall.sh  test_segmentation_video.sh
apm_phase5/scripts/archive/: getcostmap.py  gradientsteering.py
gpu_testing/: CMakeLists.txt
gpu_testing/src/: main.cpp
maps/: testarooni.pgm  testarooni.yaml  thisiscrap.pgm  thisiscrap.yaml
tt_arduino/libraries/brake/: brake.cpp  brake.h
tt_arduino/libraries/cart_odom/: cart_odom.cpp  cart_odom.h
tt_arduino/libraries/error_indication/: error_indication.cpp
tt_arduino/libraries/imu/: inv_mpu.cpp  inv_mpu_dmp_motion_driver.cpp  mpu.cpp  mpu.h
tt_arduino/libraries/notification_control/: notification_control.cpp  notification_control.h
tt_arduino/libraries/rc_input/: rc_input.cpp  rc_input.h
tt_arduino/libraries/steering/: steering.cpp
tt_arduino/libraries/throttle/: throttle.cpp
tt_arduino/libraries/ultrasonics/: ultrasonics.cpp
tt_arduino/main_due1/: main_due1.ino
tt_arduino/main_due2/: main_due2.ino
tt_arduino/test_brake_sensor/: brake_sensor.h
tt_arduino/test_cart_odom/: test_cart_odom.ino
tt_core/: apf_navigation.py  costmap_viewer.py
tt_core/catkin_ws/: map.yaml
tt_core/catkin_ws/src/camera_pub/: CMakeLists.txt  main.cpp  package.xml
tt_core/catkin_ws/src/enet/: CMakeLists.txt  package.xml
tt_core/catkin_ws/src/enet/src/: enet.py  main.py
tt_core/catkin_ws/src/eval_imu/: CMakeLists.txt  package.xml
tt_core/catkin_ws/src/eval_imu/src/: main.cpp
tt_core/catkin_ws/src/loam_to_octomap/: CMakeLists.txt  package.xml
tt_core/catkin_ws/src/loam_to_octomap/launch/: loam_to_octomap.launch
tt_core/catkin_ws/src/loam_to_octomap/src/: loam_to_octomap.cpp
tt_core/catkin_ws/src/loam_velodyne/: CMakeLists.txt
tt_core/catkin_ws/src/loam_velodyne/launch/: loam_velodyne.launch
tt_core/catkin_ws/src/odom_to_loam/src/: main.cpp
tt_core/catkin_ws/src/plotGpsOnSatelitteMap/script/: coords.txt  (+1 more)
tt_core/catkin_ws/src/rqt_apm_modecontrol/: CMakeLists.txt  plugin.xml
tt_core/catkin_ws/src/rqt_apm_ui/: CMakeLists.txt  package.xml
tt_core/catkin_ws/src/safezone/: CMakeLists.txt  ipm.cpp  main.cpp  myframe.sh  package.xml
tt_core/catkin_ws/src/safezone/include/: ipm.hpp
tt_core/catkin_ws/src/safezone/src/: blocking_main.cpp  ipm.cpp  main.cpp  seq_main.cpp
tt_core/catkin_ws/src/safezone/src/include/: classifier.hpp
tt_core/catkin_ws/src/tt_drive/: CMakeLists.txt  package.xml
tt_core/catkin_ws/src/tt_gui/: CMakeLists.txt  package.xml  plugin.xml
tt_core/catkin_ws/src/tt_start/: ken_test.rviz  map_costmaps_and_plans.rviz  single_robot.rviz
tt_core/doc/: enet_install_instructions  installation_readme
tt_core/scripts/: additions_for_opencv  apf_navigation.py  install_cuda.sh  ros_install.sh  test_segmentation_video.py  test_segmentation_video2.py
tt_core/scripts/archive/: pcd_saver.launch
(+91 files in other folders)
