<package>
  <name>safezone</name>
  <version>1.2.4</version>
  <description>
  This package uses ENet to classify safe driving zones in an image.
  </description>
  <maintainer email="rer3378@rit.edu">PR-safezone</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>


  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>